# aegis

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html
integrations/hermes/: plugin.py
integrations/pilot/: .gitignore  go.mod  go.sum  manifest.json
integrations/pilot/cmd/aegis-app/: main.go
src/: main.rs
tests/held_out_eval/: README.md  manifest.jsonl  run_held_out.py
tests/held_out_eval/corpus/benign/: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-cli-tool.md  CLAUDE-data-pipeline.md  CLAUDE-go-service.md  CLAUDE-infra-repo.md  CLAUDE-mobile-app.md  CLAUDE-web-app.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  b01_blog_prompt_injection.md  b02_security_training.md  b03_injection_test_suite.py  b04_ctf_writeup.md  b05_pentest_report.md  b06_research_abstract.md  b07_user_asks_explanation.txt  b08_scanner_docs.md  b09_owasp_llm_notes.md  b10_incident_postmortem.md  b11_conference_talk.md  b12_glossary.md  b13_code_review_comment.md  b14_faq_support.md  b15_dataset_readme.md  backup.sh  benign_01_security_docs.md  benign_02_deploy_script.sh  benign_03_mcp_config.json  benign_04_code_with_eval.py  benign_05_api_client.py  benign_06_skill_howto.md  benign_07_status_report.json  benign_08_memory_note.md  (+63 more)
tests/held_out_eval/corpus/malicious/: 01_attest_inbox.json  02_reconciler_inbox.json  03_certrotate_inbox.json  04_residency_inbox.json  05_license_inbox.json  06_sla_inbox.json  07_keyescrow_inbox.json  08_quarantine_inbox.json  09_patchwave_inbox.json  10_backupverify_inbox.json  11_memory_attest_policy.md  12_memory_reconciler_decision.md  13_memory_residency_standing.md  14_memory_license_norm.md  15_memory_sla_remediation.md  16_memory_subtle_posture.md  17_skill_cas_autorun.md  18_skill_reconciler_autoapply.md  19_skill_certrotate_mandate.md  (+95 more)
