[package]
name = "quill-index"
version = "0.3.1"
edition = "2021"
description = "Background indexing worker for Quill"
license = "MIT"
repository = "https://github.com/example/quill"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "index_throughput"
harness = false
