[project]
name = "quill-tools"
version = "0.2.0"
description = "CLI tools and helpers for Quill"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
quill = "quill_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
